--- a/host/playbook.yml
+++ b/host/playbook.yml
@@ -43,20 +43,20 @@
         state: mounted
     # Move /var contents to /media/data/var and mount
     - block:
-      - name: Check if move already done
-        stat:
-          path: /media/data/var
-        register: moved_flag
-      - name: Copy /var contents to /media/data/var
-        shell: cp -a /var /media/data/var
-        when: not moved_flag.stat.exists
-      - name: Mount /media/data/var to /var
-        mount:
-          path: /var
-          src: /media/data/var
-          fstype: none
-          opts: bind
-          state: mounted
+        - name: Check if move already done
+          stat:
+            path: /media/data/var
+          register: moved_flag
+        - name: Copy /var contents to /media/data/var
+          shell: cp -a /var /media/data/var
+          when: not moved_flag.stat.exists
+        - name: Mount /media/data/var to /var
+          mount:
+            path: /var
+            src: /media/data/var
+            fstype: none
+            opts: bind
+            state: mounted
     - name: Install required packages
       apt:
         name:
@@ -74,39 +74,39 @@
         state: present
     # Set up docker daemon config
     - block:
-      - name: Create /etc/docker
-        file:
-          path: /etc/docker
-          state: directory
-          owner: root
-          group: root
-          mode: '0755'
-      - name: Set up docker daemon config
-        copy:
-          src: docker-daemon.json
-          dest: /etc/docker/daemon.json
-          mode: '0644'
+        - name: Create /etc/docker
+          file:
+            path: /etc/docker
+            state: directory
+            owner: root
+            group: root
+            mode: "0755"
+        - name: Set up docker daemon config
+          copy:
+            src: docker-daemon.json
+            dest: /etc/docker/daemon.json
+            mode: "0644"
     - name: Create docker-registry on sdb1
       file:
         path: /media/data/docker-registry
         state: directory
         owner: root
         group: root
-        mode: '0755'
+        mode: "0755"
     - name: Create git on sdb1
       file:
         path: /media/data/git
         state: directory
         owner: root
         group: root
-        mode: '0755'
+        mode: "0755"
     - name: Create eo-git on sdb1
       file:
         path: /media/data/eo-git
         state: directory
         owner: root
         group: root
-        mode: '0755'
+        mode: "0755"
     # Set up ~haris
     - block:
         - name: Create user haris
@@ -144,25 +144,25 @@
             state: directory
             owner: haris
             group: haris
-            mode: '0700'
+            mode: "0700"
         - name: Configure Docker to use pass credential helper
           copy:
             content: '{"credsStore": "pass"}'
             dest: /home/haris/.docker/config.json
             owner: haris
             group: haris
-            mode: '0600'
+            mode: "0600"
         - name: Log into Docker registry
           docker_login:
             registry: docker.veracioux.me
             username: docker-registry
-            password: "{{ lookup('pipe', 'cd .. && lpass docker-registry') }}"
+            password: "{{ lookup('pipe', 'cd .. && pass docker-registry') }}"
           become_user: haris
         - name: Add docker-registry password to pass
           shell: |
             echo "$DOCKER_REGISTRY_PASSWORD" | pass insert -m docker-registry
           environment:
-            DOCKER_REGISTRY_PASSWORD: "{{ lookup('pipe', 'cd .. && lpass docker-registry') }}"
+            DOCKER_REGISTRY_PASSWORD: "{{ lookup('pipe', 'cd .. && pass docker-registry') }}"
           become_user: haris
         - name: Pull docker.veracioux.me/dotfiles
           docker_image:
@@ -186,91 +186,91 @@
         state: present
     # Set up ~sabina
     - block:
-      - name: Create user sabina
-        user:
-          name: sabina
-          state: present
-      - name: Copy ~sabina home skeleton
-        copy:
-          src: ./home_sabina/
-          dest: /home/sabina
-          owner: sabina
-          group: sabina
-          mode: '0755'
-      - name: Create ~sabina/.ssh directory
-        file:
-          path: /home/sabina/.ssh
-          state: directory
-          owner: sabina
-          group: sabina
-          mode: '0700'
-      - name: Generate SSH key for sabina
-        openssh_keypair:
-          path: /home/sabina/.ssh/main
-          owner: sabina
-          group: sabina
-          mode: '0600'
-          state: present
-      - name: Enable linger for sabina
-        command: loginctl enable-linger sabina
-      - name: Enable and start SSH user service for sabina
-        systemd:
-          name: ssh
-          scope: user
-          state: started
-          enabled: yes
-        become_user: sabina
+        - name: Create user sabina
+          user:
+            name: sabina
+            state: present
+        - name: Copy ~sabina home skeleton
+          copy:
+            src: ./home_sabina/
+            dest: /home/sabina
+            owner: sabina
+            group: sabina
+            mode: "0755"
+        - name: Create ~sabina/.ssh directory
+          file:
+            path: /home/sabina/.ssh
+            state: directory
+            owner: sabina
+            group: sabina
+            mode: "0700"
+        - name: Generate SSH key for sabina
+          openssh_keypair:
+            path: /home/sabina/.ssh/main
+            owner: sabina
+            group: sabina
+            mode: "0600"
+            state: present
+        - name: Enable linger for sabina
+          command: loginctl enable-linger sabina
+        - name: Enable and start SSH user service for sabina
+          systemd:
+            name: ssh
+            scope: user
+            state: started
+            enabled: yes
+          become_user: sabina
     # Set up website
     - block:
-      - name: Create ~/docker-registry directory
-        file:
-          path: /home/haris/docker-registry
-          state: directory
-          owner: haris
-          group: haris
-      - name: Create ~/auth directory
-        file:
-          path: /home/haris/auth
-          state: directory
-          owner: haris
-          group: haris
-      - name: Mount /media/data/docker-registry /home/haris/docker-registry
-        mount:
-          path: /home/haris/docker-registry
-          src: /media/data/docker-registry
-          fstype: none
-          opts: bind
-          state: mounted
-      - name: Clone or update website repo
-        git:
-          repo: https://github.com/veracioux/website
-          dest: /home/haris/website
-          update: yes
-        become_user: haris
-      - name: Revert local changes
-        shell: git restore --staged .; git restore .
-        args:
-          chdir: /home/haris/website
-        become_user: haris
-      - name: Allow pushes to website repo
-        command: git config receive.denyCurrentBranch warn
-        args:
-          chdir: /home/haris/website
-        become_user: haris
-      - name: Set up docker registry password
-        shell: pass show docker-registry | htpasswd -Bci /home/haris/auth/htpasswd docker-registry
-        become_user: haris
-      - name: Apply production compose config
-        command: ln -sf compose.prod-merge.yml compose.override.yml
-        args:
-          chdir: /home/haris/website
-        become_user: haris
-      - name: Start website services
-        command: docker-compose up --pull always --detach
-        args:
-          chdir: /home/haris/website
-        become_user: haris
-      - name: Serve website
-        command: scripts/serve.sh
-        args:
-          chdir: /home/haris/website
+        - name: Create ~/docker-registry directory
+          file:
+            path: /home/haris/docker-registry
+            state: directory
+            owner: haris
+            group: haris
+        - name: Create ~/auth directory
+          file:
+            path: /home/haris/auth
+            state: directory
+            owner: haris
+            group: haris
+        - name: Mount /media/data/docker-registry /home/haris/docker-registry
+          mount:
+            path: /home/haris/docker-registry
+            src: /media/data/docker-registry
+            fstype: none
+            opts: bind
+            state: mounted
+        - name: Clone or update website repo
+          git:
+            repo: https://github.com/veracioux/website
+            dest: /home/haris/website
+            update: yes
+          become_user: haris
+        - name: Revert local changes
+          shell: git restore --staged .; git restore .
+          args:
+            chdir: /home/haris/website
+          become_user: haris
+        - name: Allow pushes to website repo
+          command: git config receive.denyCurrentBranch warn
+          args:
+            chdir: /home/haris/website
+          become_user: haris
+        - name: Set up docker registry password
+          shell: pass show docker-registry | htpasswd -Bci /home/haris/auth/htpasswd docker-registry
+          become_user: haris
+        - name: Apply production compose config
+          command: ln -sf compose.prod-merge.yml compose.override.yml
+          args:
+            chdir: /home/haris/website
+          become_user: haris
+        - name: Start website services
+          command: docker-compose up --pull always --detach
+          args:
+            chdir: /home/haris/website
+          become_user: haris
+        - name: Serve website
+          command: scripts/serve.sh
+          args:
+            chdir: /home/haris/website
